# z.py

./: AGENTS.md  AGENT_NOTES.md  BACKLOG.md  CHANGELOG.md  DESIGN.md  NOTES.md  README.md  pyproject.toml
tests/: test_aes_fast.py  test_bundle.py  test_bundle_v1.py  test_clean.py  test_cli.py  test_core.py  test_crypto.py  test_filetree.py  test_ftp.py  test_image.py  test_ratelimit.py  test_store.py
z/: __init__.py  aes_fast.py  bundle.py  clean.py  cli.py  core.py  crypto.py  filetree.py  ftp.py  image.py  ratelimit.py  store.py
z.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
